Adding extract size to DDS-UI exchanges view